--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ repository = "https://github.com/lonesometraveler/emotibit-data-rs"
 csv = "1.1.6"
 anyhow = "1.0"
 num = "0.4.0"
+tokio = { version = "1.21.2", features = ["full"], optional = true }
+
+[[example]]
+name = "udp_server"
+required-features = ["tokio"] 
