--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ csv = "1.1.6"
 anyhow = "1.0"
 num = "0.4.0"
 tokio = { version = "1.21.2", features = ["full"], optional = true }
+itertools = "0.10.5"
 
 [[example]]
 name = "udp_server"
