--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0"
 num = "0.4.0"
 tokio = { version = "1.21.2", features = ["full"], optional = true }
 itertools = "0.10.5"
+chrono = "0.4.22"
 
 [[example]]
 name = "udp_server"
