--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ itertools = "0.10.5"
 num = "0.4.0"
 tokio = { version = "1.21.2", features = ["full"], optional = true }
 
+postcard = { version = "1.0.0" }
+serde = { version = "1.0.*", default-features = true }
+
 [[example]]
 name = "udp_server"
 required-features = ["tokio"] 
